projects/ocaml_michelson-interpreter/src/bncf/haskell_backend/Michelson/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from Michelson/Par.y
-----------------------------------------------------------------------------

state 197 contains 1 shift/reduce conflicts.
state 206 contains 1 reduce/reduce conflicts.
state 215 contains 17 shift/reduce conflicts.
state 217 contains 17 shift/reduce conflicts.
state 219 contains 144 reduce/reduce conflicts.
state 225 contains 2 reduce/reduce conflicts.
state 234 contains 17 shift/reduce conflicts.
state 236 contains 32 shift/reduce conflicts.
state 240 contains 1 shift/reduce conflicts.
state 267 contains 109 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	Int -> L_Int                                       (1)
	Nat -> L_Nat                                       (2)
	Str -> L_Str                                       (3)
	Hex -> L_Hex                                       (4)
	Prog -> Instr ';' ListInstr                        (5)
	ListData ->                                        (6)
	ListData -> Data ';' ListData                      (7)
	PairSeq -> Data Data                               (8)
	PairSeq -> Data PairSeq                            (9)
	MapSeq -> 'Elt' Data Data ';'                      (10)
	MapSeq -> 'Elt' Data Data ';' MapSeq               (11)
	Data -> Int                                        (12)
	Data -> Str                                        (13)
	Data -> Hex                                        (14)
	Data -> 'Unit'                                     (15)
	Data -> 'True'                                     (16)
	Data -> 'False'                                    (17)
	Data -> 'Pair' PairSeq                             (18)
	Data -> 'Left' Data                                (19)
	Data -> 'Right' Data                               (20)
	Data -> 'Some' Data                                (21)
	Data -> 'None'                                     (22)
	Data -> '{' ListData '}'                           (23)
	Data -> '{' MapSeq '}'                             (24)
	Data -> Instr                                      (25)
	ListInstr ->                                       (26)
	ListInstr -> Instr                                 (27)
	ListInstr -> Instr ';' ListInstr                   (28)
	Instr -> Instr ';'                                 (29)
	Instr -> '{' ListInstr '}'                         (30)
	Instr -> 'DROP'                                    (31)
	Instr -> 'DROP' Nat                                (32)
	Instr -> 'DUP'                                     (33)
	Instr -> 'DUP' Nat                                 (34)
	Instr -> 'SWAP'                                    (35)
	Instr -> 'DIG' Nat                                 (36)
	Instr -> 'DUG' Nat                                 (37)
	Instr -> 'PUSH' Typ Data                           (38)
	Instr -> 'SOME'                                    (39)
	Instr -> 'NONE' Typ                                (40)
	Instr -> 'UNIT'                                    (41)
	Instr -> 'NEVER'                                   (42)
	Instr -> 'IF_NONE' '{' ListInstr '}' '{' ListInstr '}'   (43)
	Instr -> 'PAIR'                                    (44)
	Instr -> 'PAIR' Nat                                (45)
	Instr -> 'CAR'                                     (46)
	Instr -> 'CDR'                                     (47)
	Instr -> 'UNPAIR'                                  (48)
	Instr -> 'UNPAIR' Nat                              (49)
	Instr -> 'LEFT' Typ                                (50)
	Instr -> 'RIGHT' Typ                               (51)
	Instr -> 'IF_LEFT' '{' ListInstr '}' '{' ListInstr '}'   (52)
	Instr -> 'NIL' Typ                                 (53)
	Instr -> 'CONS'                                    (54)
	Instr -> 'IF_CONS' '{' ListInstr '}' '{' ListInstr '}'   (55)
	Instr -> 'SIZE'                                    (56)
	Instr -> 'EMPTY_SET' CTyp                          (57)
	Instr -> 'EMPTY_MAP' CTyp Typ                      (58)
	Instr -> 'EMPTY_BIG_MAP' CTyp Typ                  (59)
	Instr -> 'MAP' '{' ListInstr '}'                   (60)
	Instr -> 'ITER' '{' ListInstr '}'                  (61)
	Instr -> 'MEM'                                     (62)
	Instr -> 'GET'                                     (63)
	Instr -> 'GET' Nat                                 (64)
	Instr -> 'UPDATE'                                  (65)
	Instr -> 'UPDATE' Nat                              (66)
	Instr -> 'IF' '{' ListInstr '}' '{' ListInstr '}'   (67)
	Instr -> 'LOOP' '{' ListInstr '}'                  (68)
	Instr -> 'LOOP_LEFT' '{' ListInstr '}'             (69)
	Instr -> 'LAMBDA' Typ Typ '{' ListInstr '}'        (70)
	Instr -> 'EXEC'                                    (71)
	Instr -> 'APPLY'                                   (72)
	Instr -> 'DIP' '{' ListInstr '}'                   (73)
	Instr -> 'DIP' Nat '{' ListInstr '}'               (74)
	Instr -> 'FAILWITH'                                (75)
	Instr -> 'CAST'                                    (76)
	Instr -> 'RENAME'                                  (77)
	Instr -> 'CONCAT'                                  (78)
	Instr -> 'SLICE'                                   (79)
	Instr -> 'PACK'                                    (80)
	Instr -> 'UNPACK' Typ                              (81)
	Instr -> 'ADD'                                     (82)
	Instr -> 'SUB'                                     (83)
	Instr -> 'MUL'                                     (84)
	Instr -> 'EDIV'                                    (85)
	Instr -> 'ABS'                                     (86)
	Instr -> 'ISNAT'                                   (87)
	Instr -> 'INT'                                     (88)
	Instr -> 'NEG'                                     (89)
	Instr -> 'LSL'                                     (90)
	Instr -> 'LSR'                                     (91)
	Instr -> 'OR'                                      (92)
	Instr -> 'AND'                                     (93)
	Instr -> 'XOR'                                     (94)
	Instr -> 'NOT'                                     (95)
	Instr -> 'COMPARE'                                 (96)
	Instr -> 'EQ'                                      (97)
	Instr -> 'NEQ'                                     (98)
	Instr -> 'LT'                                      (99)
	Instr -> 'GT'                                      (100)
	Instr -> 'LE'                                      (101)
	Instr -> 'GE'                                      (102)
	Instr -> 'SELF'                                    (103)
	Instr -> 'SELF_ADDRESS'                            (104)
	Instr -> 'CONTRACT' Typ                            (105)
	Instr -> 'TRANSFER_TOKENS'                         (106)
	Instr -> 'SET_DELEGATE'                            (107)
	Instr -> 'CREATE_CONTRACT' '{' ListInstr '}'       (108)
	Instr -> 'IMPLICIT_ACCOUNT'                        (109)
	Instr -> 'VOTING_POWER'                            (110)
	Instr -> 'NOW'                                     (111)
	Instr -> 'LEVEL'                                   (112)
	Instr -> 'AMOUNT'                                  (113)
	Instr -> 'BALANCE'                                 (114)
	Instr -> 'CHECK_SIGNATURE'                         (115)
	Instr -> 'BLAKE2B'                                 (116)
	Instr -> 'KECCAK'                                  (117)
	Instr -> 'SHA3'                                    (118)
	Instr -> 'SHA256'                                  (119)
	Instr -> 'SHA512'                                  (120)
	Instr -> 'HASH_KEY'                                (121)
	Instr -> 'SOURCE'                                  (122)
	Instr -> 'SENDER'                                  (123)
	Instr -> 'ADDRESS'                                 (124)
	Instr -> 'CHAIN_ID'                                (125)
	Instr -> 'TOTAL_VOTING_POWER'                      (126)
	Instr -> 'PAIRING_CHECK'                           (127)
	Instr -> 'SAPLING_EMPTY_STATE' Nat                 (128)
	Instr -> 'SAPLING_VERIFY_UPDATE'                   (129)
	Instr -> 'TICKET'                                  (130)
	Instr -> 'READ_TICKET'                             (131)
	Instr -> 'SPLIT_TICKET'                            (132)
	Instr -> 'JOIN_TICKETS'                            (133)
	Instr -> 'OPEN_CHEST'                              (134)
	TypeSeq -> Typ Typ                                 (135)
	TypeSeq -> Typ TypeSeq                             (136)
	Typ -> CTyp                                        (137)
	Typ -> 'option' Typ                                (138)
	Typ -> 'list' Typ                                  (139)
	Typ -> 'set' CTyp                                  (140)
	Typ -> 'operation'                                 (141)
	Typ -> 'contract' Typ                              (142)
	Typ -> 'ticket' CTyp                               (143)
	Typ -> 'pair' TypeSeq                              (144)
	Typ -> 'or' Typ Typ                                (145)
	Typ -> 'lambda' Typ Typ                            (146)
	Typ -> 'map' CTyp Typ                              (147)
	Typ -> 'big_map' CTyp Typ                          (148)
	Typ -> 'bls12_381_g1'                              (149)
	Typ -> 'bls12_381_g2'                              (150)
	Typ -> 'bls12_381_fr'                              (151)
	Typ -> 'sapling_transaction' Nat                   (152)
	Typ -> 'sapling_state' Nat                         (153)
	Typ -> 'chest'                                     (154)
	Typ -> 'chest_key'                                 (155)
	CTypeSeq -> CTyp CTyp                              (156)
	CTypeSeq -> CTyp CTypeSeq                          (157)
	CTyp -> 'unit'                                     (158)
	CTyp -> 'never'                                    (159)
	CTyp -> 'bool'                                     (160)
	CTyp -> 'int'                                      (161)
	CTyp -> 'nat'                                      (162)
	CTyp -> 'string'                                   (163)
	CTyp -> 'chain_id'                                 (164)
	CTyp -> 'bytes'                                    (165)
	CTyp -> 'mutez'                                    (166)
	CTyp -> 'key_hash'                                 (167)
	CTyp -> 'key'                                      (168)
	CTyp -> 'signature'                                (169)
	CTyp -> 'timestamp'                                (170)
	CTyp -> 'address'                                  (171)
	CTyp -> 'option' CTyp                              (172)
	CTyp -> 'or' CTyp CTyp                             (173)
	CTyp -> 'pair' CTypeSeq                            (174)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	';'            { PT _ (TS _ 1) }
	'ABS'          { PT _ (TS _ 2) }
	'ADD'          { PT _ (TS _ 3) }
	'ADDRESS'      { PT _ (TS _ 4) }
	'AMOUNT'       { PT _ (TS _ 5) }
	'AND'          { PT _ (TS _ 6) }
	'APPLY'        { PT _ (TS _ 7) }
	'BALANCE'      { PT _ (TS _ 8) }
	'BLAKE2B'      { PT _ (TS _ 9) }
	'CAR'          { PT _ (TS _ 10) }
	'CAST'         { PT _ (TS _ 11) }
	'CDR'          { PT _ (TS _ 12) }
	'CHAIN_ID'     { PT _ (TS _ 13) }
	'CHECK_SIGNATURE'{ PT _ (TS _ 14) }
	'COMPARE'      { PT _ (TS _ 15) }
	'CONCAT'       { PT _ (TS _ 16) }
	'CONS'         { PT _ (TS _ 17) }
	'CONTRACT'     { PT _ (TS _ 18) }
	'CREATE_CONTRACT'{ PT _ (TS _ 19) }
	'DIG'          { PT _ (TS _ 20) }
	'DIP'          { PT _ (TS _ 21) }
	'DROP'         { PT _ (TS _ 22) }
	'DUG'          { PT _ (TS _ 23) }
	'DUP'          { PT _ (TS _ 24) }
	'EDIV'         { PT _ (TS _ 25) }
	'EMPTY_BIG_MAP'{ PT _ (TS _ 26) }
	'EMPTY_MAP'    { PT _ (TS _ 27) }
	'EMPTY_SET'    { PT _ (TS _ 28) }
	'EQ'           { PT _ (TS _ 29) }
	'EXEC'         { PT _ (TS _ 30) }
	'Elt'          { PT _ (TS _ 31) }
	'FAILWITH'     { PT _ (TS _ 32) }
	'False'        { PT _ (TS _ 33) }
	'GE'           { PT _ (TS _ 34) }
	'GET'          { PT _ (TS _ 35) }
	'GT'           { PT _ (TS _ 36) }
	'HASH_KEY'     { PT _ (TS _ 37) }
	'IF'           { PT _ (TS _ 38) }
	'IF_CONS'      { PT _ (TS _ 39) }
	'IF_LEFT'      { PT _ (TS _ 40) }
	'IF_NONE'      { PT _ (TS _ 41) }
	'IMPLICIT_ACCOUNT'{ PT _ (TS _ 42) }
	'INT'          { PT _ (TS _ 43) }
	'ISNAT'        { PT _ (TS _ 44) }
	'ITER'         { PT _ (TS _ 45) }
	'JOIN_TICKETS' { PT _ (TS _ 46) }
	'KECCAK'       { PT _ (TS _ 47) }
	'LAMBDA'       { PT _ (TS _ 48) }
	'LE'           { PT _ (TS _ 49) }
	'LEFT'         { PT _ (TS _ 50) }
	'LEVEL'        { PT _ (TS _ 51) }
	'LOOP'         { PT _ (TS _ 52) }
	'LOOP_LEFT'    { PT _ (TS _ 53) }
	'LSL'          { PT _ (TS _ 54) }
	'LSR'          { PT _ (TS _ 55) }
	'LT'           { PT _ (TS _ 56) }
	'Left'         { PT _ (TS _ 57) }
	'MAP'          { PT _ (TS _ 58) }
	'MEM'          { PT _ (TS _ 59) }
	'MUL'          { PT _ (TS _ 60) }
	'NEG'          { PT _ (TS _ 61) }
	'NEQ'          { PT _ (TS _ 62) }
	'NEVER'        { PT _ (TS _ 63) }
	'NIL'          { PT _ (TS _ 64) }
	'NONE'         { PT _ (TS _ 65) }
	'NOT'          { PT _ (TS _ 66) }
	'NOW'          { PT _ (TS _ 67) }
	'None'         { PT _ (TS _ 68) }
	'OPEN_CHEST'   { PT _ (TS _ 69) }
	'OR'           { PT _ (TS _ 70) }
	'PACK'         { PT _ (TS _ 71) }
	'PAIR'         { PT _ (TS _ 72) }
	'PAIRING_CHECK'{ PT _ (TS _ 73) }
	'PUSH'         { PT _ (TS _ 74) }
	'Pair'         { PT _ (TS _ 75) }
	'READ_TICKET'  { PT _ (TS _ 76) }
	'RENAME'       { PT _ (TS _ 77) }
	'RIGHT'        { PT _ (TS _ 78) }
	'Right'        { PT _ (TS _ 79) }
	'SAPLING_EMPTY_STATE'{ PT _ (TS _ 80) }
	'SAPLING_VERIFY_UPDATE'{ PT _ (TS _ 81) }
	'SELF'         { PT _ (TS _ 82) }
	'SELF_ADDRESS' { PT _ (TS _ 83) }
	'SENDER'       { PT _ (TS _ 84) }
	'SET_DELEGATE' { PT _ (TS _ 85) }
	'SHA256'       { PT _ (TS _ 86) }
	'SHA3'         { PT _ (TS _ 87) }
	'SHA512'       { PT _ (TS _ 88) }
	'SIZE'         { PT _ (TS _ 89) }
	'SLICE'        { PT _ (TS _ 90) }
	'SOME'         { PT _ (TS _ 91) }
	'SOURCE'       { PT _ (TS _ 92) }
	'SPLIT_TICKET' { PT _ (TS _ 93) }
	'SUB'          { PT _ (TS _ 94) }
	'SWAP'         { PT _ (TS _ 95) }
	'Some'         { PT _ (TS _ 96) }
	'TICKET'       { PT _ (TS _ 97) }
	'TOTAL_VOTING_POWER'{ PT _ (TS _ 98) }
	'TRANSFER_TOKENS'{ PT _ (TS _ 99) }
	'True'         { PT _ (TS _ 100) }
	'UNIT'         { PT _ (TS _ 101) }
	'UNPACK'       { PT _ (TS _ 102) }
	'UNPAIR'       { PT _ (TS _ 103) }
	'UPDATE'       { PT _ (TS _ 104) }
	'Unit'         { PT _ (TS _ 105) }
	'VOTING_POWER' { PT _ (TS _ 106) }
	'XOR'          { PT _ (TS _ 107) }
	'address'      { PT _ (TS _ 108) }
	'big_map'      { PT _ (TS _ 109) }
	'bls12_381_fr' { PT _ (TS _ 110) }
	'bls12_381_g1' { PT _ (TS _ 111) }
	'bls12_381_g2' { PT _ (TS _ 112) }
	'bool'         { PT _ (TS _ 113) }
	'bytes'        { PT _ (TS _ 114) }
	'chain_id'     { PT _ (TS _ 115) }
	'chest'        { PT _ (TS _ 116) }
	'chest_key'    { PT _ (TS _ 117) }
	'contract'     { PT _ (TS _ 118) }
	'int'          { PT _ (TS _ 119) }
	'key'          { PT _ (TS _ 120) }
	'key_hash'     { PT _ (TS _ 121) }
	'lambda'       { PT _ (TS _ 122) }
	'list'         { PT _ (TS _ 123) }
	'map'          { PT _ (TS _ 124) }
	'mutez'        { PT _ (TS _ 125) }
	'nat'          { PT _ (TS _ 126) }
	'never'        { PT _ (TS _ 127) }
	'operation'    { PT _ (TS _ 128) }
	'option'       { PT _ (TS _ 129) }
	'or'           { PT _ (TS _ 130) }
	'pair'         { PT _ (TS _ 131) }
	'sapling_state'{ PT _ (TS _ 132) }
	'sapling_transaction'{ PT _ (TS _ 133) }
	'set'          { PT _ (TS _ 134) }
	'signature'    { PT _ (TS _ 135) }
	'string'       { PT _ (TS _ 136) }
	'ticket'       { PT _ (TS _ 137) }
	'timestamp'    { PT _ (TS _ 138) }
	'unit'         { PT _ (TS _ 139) }
	'{'            { PT _ (TS _ 140) }
	'}'            { PT _ (TS _ 141) }
	L_Int          { PT _ (T_Int $$) }
	L_Nat          { PT _ (T_Nat $$) }
	L_Str          { PT _ (T_Str $$) }
	L_Hex          { PT _ (T_Hex $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	Int             rule  1
	Nat             rule  2
	Str             rule  3
	Hex             rule  4
	Prog            rule  5
	ListData        rules 6, 7
	PairSeq         rules 8, 9
	MapSeq          rules 10, 11
	Data            rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	ListInstr       rules 26, 27, 28
	Instr           rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134
	TypeSeq         rules 135, 136
	Typ             rules 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155
	CTypeSeq        rules 156, 157
	CTyp            rules 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'ABS'          shift, and enter state 5
	'ADD'          shift, and enter state 6
	'ADDRESS'      shift, and enter state 7
	'AMOUNT'       shift, and enter state 8
	'AND'          shift, and enter state 9
	'APPLY'        shift, and enter state 10
	'BALANCE'      shift, and enter state 11
	'BLAKE2B'      shift, and enter state 12
	'CAR'          shift, and enter state 13
	'CAST'         shift, and enter state 14
	'CDR'          shift, and enter state 15
	'CHAIN_ID'     shift, and enter state 16
	'CHECK_SIGNATURE'shift, and enter state 17
	'COMPARE'      shift, and enter state 18
	'CONCAT'       shift, and enter state 19
	'CONS'         shift, and enter state 20
	'CONTRACT'     shift, and enter state 21
	'CREATE_CONTRACT'shift, and enter state 22
	'DIG'          shift, and enter state 23
	'DIP'          shift, and enter state 24
	'DROP'         shift, and enter state 25
	'DUG'          shift, and enter state 26
	'DUP'          shift, and enter state 27
	'EDIV'         shift, and enter state 28
	'EMPTY_BIG_MAP'shift, and enter state 29
	'EMPTY_MAP'    shift, and enter state 30
	'EMPTY_SET'    shift, and enter state 31
	'EQ'           shift, and enter state 32
	'EXEC'         shift, and enter state 33
	'FAILWITH'     shift, and enter state 34
	'GE'           shift, and enter state 35
	'GET'          shift, and enter state 36
	'GT'           shift, and enter state 37
	'HASH_KEY'     shift, and enter state 38
	'IF'           shift, and enter state 39
	'IF_CONS'      shift, and enter state 40
	'IF_LEFT'      shift, and enter state 41
	'IF_NONE'      shift, and enter state 42
	'IMPLICIT_ACCOUNT'shift, and enter state 43
	'INT'          shift, and enter state 44
	'ISNAT'        shift, and enter state 45
	'ITER'         shift, and enter state 46
	'JOIN_TICKETS' shift, and enter state 47
	'KECCAK'       shift, and enter state 48
	'LAMBDA'       shift, and enter state 49
	'LE'           shift, and enter state 50
	'LEFT'         shift, and enter state 51
	'LEVEL'        shift, and enter state 52
	'LOOP'         shift, and enter state 53
	'LOOP_LEFT'    shift, and enter state 54
	'LSL'          shift, and enter state 55
	'LSR'          shift, and enter state 56
	'LT'           shift, and enter state 57
	'MAP'          shift, and enter state 58
	'MEM'          shift, and enter state 59
	'MUL'          shift, and enter state 60
	'NEG'          shift, and enter state 61
	'NEQ'          shift, and enter state 62
	'NEVER'        shift, and enter state 63
	'NIL'          shift, and enter state 64
	'NONE'         shift, and enter state 65
	'NOT'          shift, and enter state 66
	'NOW'          shift, and enter state 67
	'OPEN_CHEST'   shift, and enter state 68
	'OR'           shift, and enter state 69
	'PACK'         shift, and enter state 70
	'PAIR'         shift, and enter state 71
	'PAIRING_CHECK'shift, and enter state 72
	'PUSH'         shift, and enter state 73
	'READ_TICKET'  shift, and enter state 74
	'RENAME'       shift, and enter state 75
	'RIGHT'        shift, and enter state 76
	'SAPLING_EMPTY_STATE'shift, and enter state 77
	'SAPLING_VERIFY_UPDATE'shift, and enter state 78
	'SELF'         shift, and enter state 79
	'SELF_ADDRESS' shift, and enter state 80
	'SENDER'       shift, and enter state 81
	'SET_DELEGATE' shift, and enter state 82
	'SHA256'       shift, and enter state 83
	'SHA3'         shift, and enter state 84
	'SHA512'       shift, and enter state 85
	'SIZE'         shift, and enter state 86
	'SLICE'        shift, and enter state 87
	'SOME'         shift, and enter state 88
	'SOURCE'       shift, and enter state 89
	'SPLIT_TICKET' shift, and enter state 90
	'SUB'          shift, and enter state 91
	'SWAP'         shift, and enter state 92
	'TICKET'       shift, and enter state 93
	'TOTAL_VOTING_POWER'shift, and enter state 94
	'TRANSFER_TOKENS'shift, and enter state 95
	'UNIT'         shift, and enter state 96
	'UNPACK'       shift, and enter state 97
	'UNPAIR'       shift, and enter state 98
	'UPDATE'       shift, and enter state 99
	'VOTING_POWER' shift, and enter state 100
	'XOR'          shift, and enter state 101
	'{'            shift, and enter state 102

	Prog           goto state 3
	Instr          goto state 4

State 1


	L_Int          shift, and enter state 2


State 2

	Int -> L_Int .                                      (rule 1)

	';'            reduce using rule 1
	'ABS'          reduce using rule 1
	'ADD'          reduce using rule 1
	'ADDRESS'      reduce using rule 1
	'AMOUNT'       reduce using rule 1
	'AND'          reduce using rule 1
	'APPLY'        reduce using rule 1
	'BALANCE'      reduce using rule 1
	'BLAKE2B'      reduce using rule 1
	'CAR'          reduce using rule 1
	'CAST'         reduce using rule 1
	'CDR'          reduce using rule 1
	'CHAIN_ID'     reduce using rule 1
	'CHECK_SIGNATURE'reduce using rule 1
	'COMPARE'      reduce using rule 1
	'CONCAT'       reduce using rule 1
	'CONS'         reduce using rule 1
	'CONTRACT'     reduce using rule 1
	'CREATE_CONTRACT'reduce using rule 1
	'DIG'          reduce using rule 1
	'DIP'          reduce using rule 1
	'DROP'         reduce using rule 1
	'DUG'          reduce using rule 1
	'DUP'          reduce using rule 1
	'EDIV'         reduce using rule 1
	'EMPTY_BIG_MAP'reduce using rule 1
	'EMPTY_MAP'    reduce using rule 1
	'EMPTY_SET'    reduce using rule 1
	'EQ'           reduce using rule 1
	'EXEC'         reduce using rule 1
	'FAILWITH'     reduce using rule 1
	'False'        reduce using rule 1
	'GE'           reduce using rule 1
	'GET'          reduce using rule 1
	'GT'           reduce using rule 1
	'HASH_KEY'     reduce using rule 1
	'IF'           reduce using rule 1
	'IF_CONS'      reduce using rule 1
	'IF_LEFT'      reduce using rule 1
	'IF_NONE'      reduce using rule 1
	'IMPLICIT_ACCOUNT'reduce using rule 1
	'INT'          reduce using rule 1
	'ISNAT'        reduce using rule 1
	'ITER'         reduce using rule 1
	'JOIN_TICKETS' reduce using rule 1
	'KECCAK'       reduce using rule 1
	'LAMBDA'       reduce using rule 1
	'LE'           reduce using rule 1
	'LEFT'         reduce using rule 1
	'LEVEL'        reduce using rule 1
	'LOOP'         reduce using rule 1
	'LOOP_LEFT'    reduce using rule 1
	'LSL'          reduce using rule 1
	'LSR'          reduce using rule 1
	'LT'           reduce using rule 1
	'Left'         reduce using rule 1
	'MAP'          reduce using rule 1
	'MEM'          reduce using rule 1
	'MUL'          reduce using rule 1
	'NEG'          reduce using rule 1
	'NEQ'          reduce using rule 1
	'NEVER'        reduce using rule 1
	'NIL'          reduce using rule 1
	'NONE'         reduce using rule 1
	'NOT'          reduce using rule 1
	'NOW'          reduce using rule 1
	'None'         reduce using rule 1
	'OPEN_CHEST'   reduce using rule 1
	'OR'           reduce using rule 1
	'PACK'         reduce using rule 1
	'PAIR'         reduce using rule 1
	'PAIRING_CHECK'reduce using rule 1
	'PUSH'         reduce using rule 1
	'Pair'         reduce using rule 1
	'READ_TICKET'  reduce using rule 1
	'RENAME'       reduce using rule 1
	'RIGHT'        reduce using rule 1
	'Right'        reduce using rule 1
	'SAPLING_EMPTY_STATE'reduce using rule 1
	'SAPLING_VERIFY_UPDATE'reduce using rule 1
	'SELF'         reduce using rule 1
	'SELF_ADDRESS' reduce using rule 1
	'SENDER'       reduce using rule 1
	'SET_DELEGATE' reduce using rule 1
	'SHA256'       reduce using rule 1
	'SHA3'         reduce using rule 1
	'SHA512'       reduce using rule 1
	'SIZE'         reduce using rule 1
	'SLICE'        reduce using rule 1
	'SOME'         reduce using rule 1
	'SOURCE'       reduce using rule 1
	'SPLIT_TICKET' reduce using rule 1
	'SUB'          reduce using rule 1
	'SWAP'         reduce using rule 1
	'Some'         reduce using rule 1
	'TICKET'       reduce using rule 1
	'TOTAL_VOTING_POWER'reduce using rule 1
	'TRANSFER_TOKENS'reduce using rule 1
	'True'         reduce using rule 1
	'UNIT'         reduce using rule 1
	'UNPACK'       reduce using rule 1
	'UNPAIR'       reduce using rule 1
	'UPDATE'       reduce using rule 1
	'Unit'         reduce using rule 1
	'VOTING_POWER' reduce using rule 1
	'XOR'          reduce using rule 1
	'{'            reduce using rule 1
	'}'            reduce using rule 1
	L_Int          reduce using rule 1
	L_Str          reduce using rule 1
	L_Hex          reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_pProg -> Prog .                              (rule 0)

	%eof           accept


State 4

	Prog -> Instr . ';' ListInstr                       (rule 5)
	Instr -> Instr . ';'                                (rule 29)

	';'            shift, and enter state 173


State 5

	Instr -> 'ABS' .                                    (rule 86)

	';'            reduce using rule 86
	'ABS'          reduce using rule 86
	'ADD'          reduce using rule 86
	'ADDRESS'      reduce using rule 86
	'AMOUNT'       reduce using rule 86
	'AND'          reduce using rule 86
	'APPLY'        reduce using rule 86
	'BALANCE'      reduce using rule 86
	'BLAKE2B'      reduce using rule 86
	'CAR'          reduce using rule 86
	'CAST'         reduce using rule 86
	'CDR'          reduce using rule 86
	'CHAIN_ID'     reduce using rule 86
	'CHECK_SIGNATURE'reduce using rule 86
	'COMPARE'      reduce using rule 86
	'CONCAT'       reduce using rule 86
	'CONS'         reduce using rule 86
	'CONTRACT'     reduce using rule 86
	'CREATE_CONTRACT'reduce using rule 86
	'DIG'          reduce using rule 86
	'DIP'          reduce using rule 86
	'DROP'         reduce using rule 86
	'DUG'          reduce using rule 86
	'DUP'          reduce using rule 86
	'EDIV'         reduce using rule 86
	'EMPTY_BIG_MAP'reduce using rule 86
	'EMPTY_MAP'    reduce using rule 86
	'EMPTY_SET'    reduce using rule 86
	'EQ'           reduce using rule 86
	'EXEC'         reduce using rule 86
	'FAILWITH'     reduce using rule 86
	'False'        reduce using rule 86
	'GE'           reduce using rule 86
	'GET'          reduce using rule 86
	'GT'           reduce using rule 86
	'HASH_KEY'     reduce using rule 86
	'IF'           reduce using rule 86
	'IF_CONS'      reduce using rule 86
	'IF_LEFT'      reduce using rule 86
	'IF_NONE'      reduce using rule 86
	'IMPLICIT_ACCOUNT'reduce using rule 86
	'INT'          reduce using rule 86
	'ISNAT'        reduce using rule 86
	'ITER'         reduce using rule 86
	'JOIN_TICKETS' reduce using rule 86
	'KECCAK'       reduce using rule 86
	'LAMBDA'       reduce using rule 86
	'LE'           reduce using rule 86
	'LEFT'         reduce using rule 86
	'LEVEL'        reduce using rule 86
	'LOOP'         reduce using rule 86
	'LOOP_LEFT'    reduce using rule 86
	'LSL'          reduce using rule 86
	'LSR'          reduce using rule 86
	'LT'           reduce using rule 86
	'Left'         reduce using rule 86
	'MAP'          reduce using rule 86
	'MEM'          reduce using rule 86
	'MUL'          reduce using rule 86
	'NEG'          reduce using rule 86
	'NEQ'          reduce using rule 86
	'NEVER'        reduce using rule 86
	'NIL'          reduce using rule 86
	'NONE'         reduce using rule 86
	'NOT'          reduce using rule 86
	'NOW'          reduce using rule 86
	'None'         reduce using rule 86
	'OPEN_CHEST'   reduce using rule 86
	'OR'           reduce using rule 86
	'PACK'         reduce using rule 86
	'PAIR'         reduce using rule 86
	'PAIRING_CHECK'reduce using rule 86
	'PUSH'         reduce using rule 86
	'Pair'         reduce using rule 86
	'READ_TICKET'  reduce using rule 86
	'RENAME'       reduce using rule 86
	'RIGHT'        reduce using rule 86
	'Right'        reduce using rule 86
	'SAPLING_EMPTY_STATE'reduce using rule 86
	'SAPLING_VERIFY_UPDATE'reduce using rule 86
	'SELF'         reduce using rule 86
	'SELF_ADDRESS' reduce using rule 86
	'SENDER'       reduce using rule 86
	'SET_DELEGATE' reduce using rule 86
	'SHA256'       reduce using rule 86
	'SHA3'         reduce using rule 86
	'SHA512'       reduce using rule 86
	'SIZE'         reduce using rule 86
	'SLICE'        reduce using rule 86
	'SOME'         reduce using rule 86
	'SOURCE'       reduce using rule 86
	'SPLIT_TICKET' reduce using rule 86
	'SUB'          reduce using rule 86
	'SWAP'         reduce using rule 86
	'Some'         reduce using rule 86
	'TICKET'       reduce using rule 86
	'TOTAL_VOTING_POWER'reduce using rule 86
	'TRANSFER_TOKENS'reduce using rule 86
	'True'         reduce using rule 86
	'UNIT'         reduce using rule 86
	'UNPACK'       reduce using rule 86
	'UNPAIR'       reduce using rule 86
	'UPDATE'       reduce using rule 86
	'Unit'         reduce using rule 86
	'VOTING_POWER' reduce using rule 86
	'XOR'          reduce using rule 86
	'{'            reduce using rule 86
	'}'            reduce using rule 86
	L_Int          reduce using rule 86
	L_Str          reduce using rule 86
	L_Hex          reduce using rule 86
	%eof           reduce using rule 86


State 6

	Instr -> 'ADD' .                                    (rule 82)
